# acoustic-event-prediction

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run_train.sh
.claude/: .nfs0000000000452f6200000502
.devcontainer/: Dockerfile  devcontainer.json
data/urfunny2/: README.md
notebooks/: pygame.ipynb  test.py
scripts/: compute_features.py  compute_features_multi_speaker.py  compute_transformer_outs.py  compute_urfunny2_features.py  predict_humor_from_moshi_responses.py  prefecting_responses.py  regenerate_labels_all_speakers.py  train_humor_text.py  train_laughter_predictor.py  train_urfunny2_bilstm.py  train_urfunny2_humor.py
src/laughter_prediction/: __init__.py  dataset.py  evaluate.py  focal_loss.py  iterable_dataset.py  iterable_train.py  metrics.py  model.py  preprocess_concat.py  regression_iterable_dataset.py  train.py  utils.py
src/podcast_processing/: __init__.py  alignment_merger.py  audio_masking.py  create_labels.py  dataset_enumerator.py  distributed_orchestrator.py  episode_output_writer.py  episode_processor.py  extract_features.py  label_generator.py  multi_speaker_orchestrator.py  multi_speaker_processor.py  utils.py
